# AoC_2024

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: input.rs  lib.rs
src/day10/: day10_model.rs
src/day11/: day11_model.rs
src/day12/: day12_model.rs
src/day14/: day14_model.rs
src/day15/: day15_model.rs
src/day16/: day16_model.rs
src/day17/: day17_model.rs
src/day21/: day21_model.rs
src/day3/: day3_model.rs
src/day4/: day4_model.rs
src/day5/: day5_model.rs
src/day7/: day7_model.rs
src/day8/: day8_model.rs
src/day9/: day9_model.rs
