[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
itertools = "0.10.5"
linked_hash_set = "0.1.4"
nom = "7.1.3"
num = "0.4.0"
pathfinding = "4.8.0"
prime_factorization = "1.0.4"
range-ext = "0.1.3"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = {version = "0.11.13", features = ["blocking"] }
rustfft = "6.1.0"
hex = "0.4.3"
sorted-vec = "0.8.3"
crossterm = "0.27.0"

